feat: add entities and orchestration service
- implement Division and Employee entities with equality contracts
- add FacadeService to coordinate CSV ingestion and DTO-to-Entity mapping workflow

ref: removed unused import in CsvEmployeeReaderTest